added header image and text. Added footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,48 @@
 nav img {
     margin-right:10px;
 }
+
+/*--------------------------------- Header*/
+
+.header-container {
+  position: relative;  
+  height: 25vh;
+}
+
+.header-intro-box {
+    height: 400px;
+    width: 1000px;
+    background-color: #2D3039;
+    opacity: 0.8;
+    position: absolute;
+    color: white;
+    top: 40%;
+    left: 25%;
+    
+}
+
+.header-image {
+    position: absolute;
+}
+
+.header-intro-box p {
+    padding: 10px;
+}
+
+/*--------------------------------- Header*/
+
+footer {
+    background-color: #2D3039;
+    height: 50px;
+    margin-top: 50px;
+}
+
+.github-link {
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 15px;
+}
+
+.github-link li a i {
+    font-size: 20px;
+}
