--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ nav a {
 }
 
 
-
 /*--------------------------------- Main Navigation*/
 
 .navbar-colour {
@@ -54,10 +53,18 @@ footer {
 }
 
 
-/*--------------------------------- Main section*/
-.stats-block {
+/*--------------------------------- Top section*/
+
+.top-stats {
     background-color: #EEEEEE;
-    color: #113B92;
+    padding-top: 10px;
     margin-top: 30px;
+    margin-right: 10px;
+    margin-left: 10px;
+    color: #2070B0;
 }
+
+
+
+/*--------------------------------- Media queries*/
 
