--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ nav img {
 
 
 
-/*--------------------------------- Header*/
+/*--------------------------------- Footer*/
 
 footer {
     background-color: #2D3039;
@@ -62,6 +62,12 @@ footer {
     margin-right: 10px;
     margin-left: 10px;
     color: #2070B0;
+}
+
+/*--------------------------------- Incidents by borough section*/
+
+.borough-incidents-barchart {
+    margin-top: 30px;
 }
 
 
