--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,14 +36,55 @@ nav img {
 
 /*--------------------------------- Header*/
 
-/*--------------------------------- Intro*/
-.intro {
+/*--------------------------------- Chart/info card background styling*/
+
+.card-styling {
     background-color: #EEEEEE;
     color: #113B92;
+    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.80);
+}
+
+/*--------------------------------- Intro section*/
+.intro {
     padding: 10px;
     margin-top: 50px;
-    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.80);
     max-width: 80%;
+}
+
+/*--------------------------------- Top section stats -number displays*/
+
+.top-stats {
+    padding-top: 10px;
+    margin-top: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+.num-display {
+    font-size: 2em;
+}
+
+/*--------------------------------- Pies and donut section */
+
+.pie-donut-section {
+    padding-top: 10px;
+    margin-top: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+/*--------------------------------- Incidents by borough section*/
+
+.borough-incidents-barchart {
+    margin-top: 50px;
+    background-color: #EEEEEE;
+    
+}
+
+.vehicle-type-rowchart {
+    margin-top: 50px;
+    background-color: #EEEEEE;
+    
 }
 
 /*--------------------------------- Footer*/
@@ -63,52 +104,6 @@ footer {
 .github-link li a i {
     font-size: 20px;
 }
-
-
-/*--------------------------------- Top section*/
-
-.top-stats {
-    background-color: #EEEEEE;
-    padding-top: 10px;
-    margin-top: 30px;
-    margin-right: 20px;
-    margin-left: 20px;
-    color: #113B92;
-    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.80);
-    
-}
-
-.num-display {
-    font-size: 2em;
-}
-
-/*--------------------------------- Pies and donut section*/
-
-.pie-donut-section {
-    background-color: #EEEEEE;
-    padding-top: 10px;
-    margin-top: 30px;
-    margin-right: 20px;
-    margin-left: 20px;
-    color: #113B92;
-    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.80);
-    
-}
-
-/*--------------------------------- Incidents by borough section*/
-
-.borough-incidents-barchart {
-    margin-top: 50px;
-    background-color: #EEEEEE;
-    
-}
-
-.vehicle-type-rowchart {
-    margin-top: 50px;
-    background-color: #EEEEEE;
-    
-}
-
 
 
 /*--------------------------------- Media queries*/
