Added intro, text under number displays and pie charts to explain or support results

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url(../images/asphalt_background_dark1.png);
     font-family: 'Cabin', sans-serif;
+    padding-top: 55px;
 }
 
 h5 {
