Changed the middle pie chart into a donut chart and improved it's appearance with different labels and colours

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,9 @@ nav img {
     padding-top: 10px;
 }
 
+.age_donut label {
+   color: red;
+}
 /*--------------------------------- Bar chart- Incidents by area section*/
 
 .area-incidents-barchart {
