--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,68 @@ nav img {
     margin-right:10px;
 }
 
+/*--------------------------------- Help -click to pop up*/
+
+.help_bkgrd_cover{
+    background:rgba(0,0,0,.4);
+    cursor:pointer;
+    display:none;
+    height:100%;
+    position:fixed;
+    text-align:center;
+    top:0;
+    width:100%;
+    z-index:10000;
+}
+.help_bkgrd_cover .verticle_centre_popup{
+    display:inline-block;
+    height:100%;
+    vertical-align:middle;
+}
+.help_bkgrd_cover > div {
+    background-color: #fff;
+    box-shadow: 10px 10px 60px #555;
+    display: inline-block;
+    height: auto;
+    max-width: 551px;
+    min-height: 100px;
+    vertical-align: middle;
+    width: 60%;
+    position: relative;
+    border-radius: 8px;
+    padding: 15px 5%;
+}
+.help_popup_close {
+    background-color: #fff;
+    border: 3px solid #999;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial;
+    font-weight: bold;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    font-size: 25px;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+}
+.help_popup_close:hover {
+    background-color: #ccc;
+}
+.help_trigger {
+    cursor: pointer;
+    font-size: 20px;
+    margin: 20px;
+    display: inline-block;
+    font-weight: bold;
+}
+
 /*--------------------------------- Header*/
+
+/*--------------------------------- Divider*/
 
 .police_tape {
     display: block;
