--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,13 @@ body {
     padding-top: 55px;
 }
 
-h5, h2 {
+h2, .nav-link{
     font-family: 'Hammersmith One' , sans-serif;
-    padding-top: 20px;
+}
+
+h5 {
+  padding-top: 20px;  
+  font-family: 'Hammersmith One' , sans-serif;
 }
 
 a {
@@ -22,7 +26,6 @@ a:hover {
     -o-transition:all 0.100 ease-in-out;
 }
 
-
 /*--------------------------------- Main Navigation*/
 
 .navbar-colour {
@@ -33,50 +36,56 @@ a:hover {
     color: #EEEEEE;
 }
 
-.nav-link-colour {
-    color: #EEEEEE;
-}
-
 .nav-link {
-    margin-right: 20px;
+    margin-right: 60px;
+    color: #2D3039;
+    background-color: #EEEEEE;
+    border-radius: 5px;
+    box-shadow: 4px 4px 1px 0px rgba(0,0,0,0.80);
+    width: 60%;
+    
 }
 
-.nav-link-colour:hover {
-    color: #113B92;
+.nav-link:hover {
+    color: #EEEEEE;
+    background-color: #113B92;
+    transition:all 0.100 ease-in-out;
+    -moz-transition:all 0.100 ease-in-out;
+    -webkit-transition:all 0.100 ease-in-out;
+    -o-transition:all 0.100 ease-in-out;
 }
 
 nav img {
-    margin-right:10px;
+    margin-right: 10px;
 }
+
+
 
 /*--------------------------------- Help -click to pop up*/
 
 .help-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   text-align: center;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.6); 
 }
 
-/* Modal Content/Box */
 .help-content {
-  
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 10% auto; 
   padding: 20px;
   position: relative;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%; 
   animation-name: animatetop;
   animation-duration: 0.4s
 }
 
-/* The Close Button */
 .help_close {
   color: #2D3039;
   position: absolute;
@@ -86,16 +95,13 @@ nav img {
   padding-top: 10px;
 }
 
-/* Modal Header */
 .help-header {
   padding-bottom: 10px;
   color: #2D3039;
 }
 
-/* Modal Body */
 .help-body {
     padding: 5px 16px;
-    
 }
 
 .help_close:hover,
@@ -108,7 +114,6 @@ nav img {
     -o-transition:all 0.100 ease-in-out;
 }
 
-/* Add Animation */
 @keyframes animatetop {
   from {top: -300px; opacity: 0}
   to {top: 0; opacity: 1}
