--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,12 @@ a:hover {
     -o-transition:all 0.100 ease-in-out;
 }
 
+.dc-chart g.row text {
+    fill: black;
+}
+
+
+
 /*--------------------------------- Main Navigation*/
 nav {
     height: 50px;
@@ -158,7 +164,7 @@ hr {
 
 .police_tape {
     display: block;
-    margin: 70px auto 50px;
+    margin: 60px auto 40px;
     height: 20px;
     opacity: 0.8;
     border-radius: 5px;
@@ -178,6 +184,11 @@ hr {
 .intro {
     padding: 10px;
     margin-top: 50px;
+}
+
+.intro h3 {
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 /*--------------------------------- Top section stats -number displays*/
@@ -214,9 +225,6 @@ hr {
     padding-top: 10px;
 }
 
-.age_donut label {
-   color: red;
-}
 /*--------------------------------- Bar chart- Incidents by area section*/
 
 .area-incidents-barchart {
