--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,12 @@ h5, nav a {
   font-family: 'Hammersmith One' , sans-serif;
 }
 
-
-a {
+.link-style {
     color: #0666f9;
 }
 
-a:hover {
-  color: #113B92;  
+.link-style:hover {
+  color: #84A5B8;  
   text-decoration: none;
   transition:all 0.25s ease-in-out;
     -moz-transition:all 0.25s ease-in-out;
@@ -42,7 +41,6 @@ nav {
     width: 100%;
     top: 0;
     z-index: 1;
-    
 }
 
 .logo-container {
@@ -50,18 +48,25 @@ nav {
     margin-left: 10px;
     display: inline-block;
     font-size: 1.2em;
-    
 }
 
 .logo {
     color: #EEEEEE;
 }
 
+.logo:hover {
+  color: #84A5B8;  
+  text-decoration: none;
+  transition:all 0.25s ease-in-out;
+    -moz-transition:all 0.25s ease-in-out;
+    -webkit-transition:all 0.25s ease-in-out;
+    -o-transition:all 0.25s ease-in-out;
+}
+
 .nav-buttons {
     float: right;
     padding-top: 10px;
     margin-right: 30px;
-   
 }
 
 .nav-btn {
@@ -74,7 +79,6 @@ nav {
 
 .help-btn {
     margin-right: 30px;
-    
 }
 
 .nav-btn:hover {
@@ -254,6 +258,25 @@ hr {
   font-size: 0.7rem;
 }
 
+
+.back-to-top-link {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.back-to-top-link a {
+    color: #EEEEEE;
+}
+
+.back-to-top-link a:hover {
+  color: #84A5B8;  
+  text-decoration: none;
+  transition:all 0.25s ease-in-out;
+    -moz-transition:all 0.25s ease-in-out;
+    -webkit-transition:all 0.25s ease-in-out;
+    -o-transition:all 0.25s ease-in-out;
+}
+
 /*--------------------------------- Footer*/
 
 footer {
@@ -276,7 +299,7 @@ footer {
 }
 
 .github-link a i:hover {
-    color: #113B92;
+    color: #84A5B8;
     transition:all 0.25s ease-in-out;
       -moz-transition:all 0.25s ease-in-out;
       -webkit-transition:all 0.25s ease-in-out;
@@ -288,12 +311,7 @@ footer {
     position: absolute;
     padding-top: 10px;
     padding-left: 10px;
-    
 }
-
-
-
-
 
 /*--------------------------------- Media queries*/
 
