--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 body {
-    background-image: url(../images/asphalt_background_dark1.png);
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Lato', sans-serif;
     padding-top: 50px;
-    
 }
 
-h3, h2, .nav-btn{
-    font-family: 'Hammersmith One' , sans-serif;
+h3, h2, .nav-btn, .num-display {
+    font-family: 'Montserrat' , sans-serif;
+    font-weight: 400;
 }
 
 h5, nav a {
   padding-top: 20px;  
-  font-family: 'Hammersmith One' , sans-serif;
+  font-family: 'Montserrat' , sans-serif;
+  font-weight: 400;
 }
 
 .link-style {
@@ -184,9 +184,7 @@ hr {
 
 .card-styling {
     background-color: #EEEEEE;
-    color: #113B92;
-    border: 0.5px solid #0666f9;
-    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.80);
+    box-shadow: 10px 10px 4px 0px rgba(0,0,0,0.50);
 }
 
 .chart-title {
