Adjusted close button on help modal as it was too far to the right of the page and not very visible on tablets and mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,4 +319,8 @@ footer {
         margin-left: 25px;
         margin-right: 25px;
     }
+    .help_close {
+        font-size: 1.5em;
+        left: 93%;
+    }
 }
